# last-fm-rpc-with-realease-year

./: LICENSE  README.md  build.py  config.yaml  main.py  pyproject.toml
api/discord/: rpc.py
api/lastfm/user/: library.py  profile.py  tracking — kopia.py  tracking.py
constants/: project.py
core/: application.py
translations/: EN.yaml
utils/: gui.py  logging_config.py  reader.py  request_utils.py  string_utils.py  update_checker.py  url_utils.py
